--- a/src/app/admin/admin-products/admin-products.component.html
+++ b/src/app/admin/admin-products/admin-products.component.html
@@ -2,7 +2,12 @@
 <p>
   <a routerLink="/admin/products/new" class="btn btn-primary">New Product</a>
 </p>
-
+<p>
+  <input
+    #query
+    (keyup)="filter(query.value)"
+    type="text" class="form-control" placeholder="search...">
+</p>
 <table class="table">
   <thead>
     <tr>
@@ -12,7 +17,7 @@
     </tr>
   </thead>
   <tbody>
-    <tr *ngFor="let p of product$ | async">
+    <tr *ngFor="let p of filteredProducts">
       <td>{{ p.title }}</td>
       <td>{{ p.price }}</td>
       <td>
