--- a/src/app/shopping-cart/shopping-cart.component.html
+++ b/src/app/shopping-cart/shopping-cart.component.html
@@ -3,7 +3,11 @@
 <div class="row col-10" *ngIf="cart$ | async as cart">
   <p>
     You have {{ cart.totalItemsCount }} items in your shopping carts.
-  </p>
+
+  <button 
+  *ngIf="cart.items.length"
+   (click)="clearCart()"
+  class="btn btn-light btn-sm">Clear Shopping Cart</button>  </p>
   <table class="table">
     <thead>
       <tr>
@@ -37,7 +41,9 @@
       </tr>
     </tfoot>
   </table>
-  <button 
-     (click)="clearCart()"
-    class="btn btn-danger btn-sm">Clear Shopping Cart</button>
+  <a 
+    *ngIf="cart.items.length"
+    routerLink="/check-out"
+    class="btn btn-primary">Check Out</a>
+
 </div>
